--- a/packages/zec-rpc/package.json
+++ b/packages/zec-rpc/package.json
@@ -40,6 +40,7 @@
     "helmet": "^7.0.0",
     "jayson": "^4.1.0",
     "lodash.isequal": "^4.5.0",
-    "loglevel": "^1.8.1"
+    "loglevel": "^1.8.1",
+    "node-fetch": "^3.3.2"
   }
 }
